kubernetes/infra/longhorn/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-ui
  namespace: longhorn-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`longhorn.k3s.poolnode.net`)
      kind: Rule
      services:
        - name: longhorn-frontend
          kind: Service
          namespace: longhorn-system
          port: 80
  tls:
    secretName: poolnode-wildcard-tls
